---
source: crates/noseyparker-cli/tests/help/mod.rs
expression: stdout
---
Nosey Parker is a command-line program that finds secrets and sensitive information in textual data
and Git history.

Usage: noseyparker [OPTIONS] <COMMAND>

Commands:
  scan         Scan content for secrets
  summarize    Summarize scan findings
  report       Report detailed scan findings
  datastore    Manage datastores
  rules        Manage rules and rulesets
  annotations  Manage annotations (experimental)
  generate     Generate Nosey Parker release assets
  help         Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
  -v, --verbose...
          Enable verbose output
          
          This can be repeated up to 3 times to enable successively more output.

  -q, --quiet
          Suppress non-error feedback messages
          
          This silences WARNING, INFO, DEBUG, and TRACE messages and disables progress bars. This
          overrides any provided verbosity and progress reporting options.

      --color <MODE>
          Enable or disable colored output
          
          When this is "auto", colors are enabled for stdout and stderr when they are terminals.
          
          If the `NO_COLOR` environment variable is set, it takes precedence and is equivalent to
          `--color=never`.
          
          [default: auto]
          [possible values: auto, never, always]

      --progress <MODE>
          Enable or disable progress bars
          
          When this is "auto", progress bars are enabled when stderr is a terminal.
          
          [default: auto]
          [possible values: auto, never, always]

      --ignore-certs
          Ignore validation of TLS certificates

Advanced Global Options:
      --rlimit-nofile <LIMIT>
          Set the rlimit for number of open files to LIMIT
          
          This should not need to be changed from the default unless you run into crashes from
          running out of file descriptors.
          
          [default: 16384]

      --sqlite-cache-size <SIZE>
          Set the cache size for SQLite connections to SIZE
          
          This has the effect of setting SQLite's `pragma cache_size=SIZE`. The default value is set
          to use a maximum of 1GiB for database cache. See
          <https://sqlite.org/pragma.html#pragma_cache_size> for more details.
          
          [default: -1048576]

      --enable-backtraces <BOOL>
          Enable or disable backtraces on panic
          
          This has the effect of setting the `RUST_BACKTRACE` environment variable to 1.
          
          [default: true]
          [possible values: true, false]
